Performance optimizations. Cached initialized SSLSocketFactory and compiled Groovy scripts. Added buffering in places.